--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "source": "https://github.com/LibreDTE/libredte-lib"
     },
     "require": {
-        "php": "7.3.* || 7.4.*",
+        "php": "^8.1",
         "ext-curl": "*",
         "ext-openssl": "*",
         "ext-soap": "*"
